--- a/app/src/main/res/layout/deal_item_row.xml
+++ b/app/src/main/res/layout/deal_item_row.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/deal_card"
     android:padding="5dp"
     app:cardCornerRadius="5dp"
     android:layout_marginLeft="5dp"
