- Implement deal deletion - Delete deal image on deletion - Optimize ui - Fix frozen ui on ListActivity

--- a/app/src/main/res/layout/deal_item_row.xml
+++ b/app/src/main/res/layout/deal_item_row.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/deal_card"
     android:padding="5dp"
     app:cardCornerRadius="5dp"
@@ -22,34 +23,36 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/card_image_desc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/card_image_desc" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_price"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="26dp"
             android:layout_marginEnd="8dp"
-            android:text="800"
             android:gravity="end"
+            android:text="@string/price_example"
+            android:textColor="@color/colorAccent"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_deal_title"
-            android:maxLines="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:text="Nigerian Woman"
-            android:textSize="24sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="@string/title_example"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/tv_price"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_deal_image"
@@ -63,8 +66,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Awesome wonders of a typical Nigeria woman. She is black and beautiful"
+            android:text="@string/description_example"
             android:textSize="14sp"
+            android:maxLines="2"
+            android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_deal_image"
