--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -53,6 +53,11 @@
         android:layout_marginTop="39dp"
         android:layout_marginEnd="8dp"
         android:text="@string/upload_image_text"
+        android:background="@drawable/button_bg"
+        android:textColor="@android:color/white"
+        android:elevation="2dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_input" />
