--- a/app/src/main/res/layout/deal_item_row.xml
+++ b/app/src/main/res/layout/deal_item_row.xml
@@ -27,6 +27,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/corner_radius_bg"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
